<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="title_activity_layout">LayoutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="searchHint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="beginDate">Begin Date</string>
    <string name="title_activity_webview">WebviewActivity</string>
</resources>
